--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="nodejs1.html">nodejs1</a></li>
+    <li><a href="/?id=nodejs1">nodejs1</a></li>
+    <li><a href="/?id=nodejs2">nodejs2</a></li>
   </ol>
   <h2>WEB</h2>
-  <p>Hello!
-  </p>
+  <p>Hello!</p>
 </body>
 </html>
